--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/icon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>AITextCleaner| Remove Extra or Hidden charaters </title>
+    <title>AITextCleaner| Remove Extra/Hidden charaters </title>
   </head>
   <body>
     <div id="root"></div>
